--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,16 @@
 anyio==4.2.0
+Brotli==1.1.0
 certifi==2023.11.17
 charset-normalizer==3.3.2
 h11==0.14.0
 httpcore==1.0.2
 httpx==0.25.2
 idna==3.6
+mutagen==1.47.0
+pycryptodomex==3.19.1
 python-telegram-bot==20.7
 requests==2.31.0
 sniffio==1.3.0
 urllib3==2.1.0
+websockets==12.0
+yt-dlp==2023.12.30
