--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,8 @@ idna==3.6
 mutagen==1.47.0
 pycryptodomex==3.19.1
 python-telegram-bot==20.7
+pytube==15.0.0
 requests==2.31.0
 sniffio==1.3.0
 urllib3==2.1.0
 websockets==12.0
-yt-dlp==2023.12.30
